--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <resources>
-    <string name="app_name">WhatsApp</string>
-    <string name="tv_description">WhatsApp <font color='#0EA9EF'>Hizmet Koşulları ve Gizlilik Politikası\'nı</font> onaylamak için \"Onayla ve devam et\"a dokunun.</string>
+    <string name="app_name">TrueChat</string>
+    <string name="tv_description">TrueChat <font color='#0EA9EF'>Hizmet Koşulları ve Gizlilik Politikası\'nı</font> onaylamak için \"Onayla ve devam et\"a dokunun.</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="wp_verified_description">WhatsApp telefon numaranızı doğrulamak için bir SMS mesajı gönderecek. Ülke kodunuzu ve telefon numaranızı girin:</string>
+    <string name="wp_verified_description">TrueChat telefon numaranızı doğrulamak için bir SMS mesajı gönderecek. Ülke kodunuzu ve telefon numaranızı girin:</string>
     <string name="wp_info">Operatör SMS ücreti uygulanabilir</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="edittext_hint"><font size="40">––– –––</font></string>
     <integer name="anim_duration">200</integer>
-    <string name="agora_app_id">b8a70575b7fa4f2bb4ce613865148a89</string>
-    <string name="agora_token">006b8a70575b7fa4f2bb4ce613865148a89IADJbLDBu9frmtn+pOW9QTLwjQXKkqEei2RhV+ozZmx5iqrynWUAAAAAEACBOFkKtezBYQEAAQC07MFh</string>
-    <string name="agora_channel_name">chat</string>
+    <string name="agora_app_id">YOUR APP ID</string>
+    <string name="agora_token">YOUR TOKEN</string>
+    <string name="agora_channel_name">YOUR CHANNEL NAME</string>
 </resources>
